<resources>
    <string name="app_name">filesApp</string>
    <string name="title_activity_new_connection" translatable="false">NewConnectionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    // Strings for application
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SpecifyConnectionKey">Specify the connection key</string>
    <string name="excitingKey">Key</string>
    <string name="letsConnect">Let\'s connect!</string>
    <string name="textConnectionKey">Your connection key is</string>
    <string name="defaultValue4Zero" translatable="false">#00000</string>
    <string name="startConnection">Start the Connection!</string>
    <string name="homeBtnText">Home</string>
    <string name="getFileBtnText">Get file</string>
    <string name="getFileDesc">Start new connection with someone to get a file you need</string>
    <string name="sendFileBtnText">Send file</string>
    <string name="sendFileDescr">Join an existing connection to send a file</string>
    <string name="settingsBtnTExt">Settings and so on</string>
    <string name="settingsDescr">If you want to change something…</string>
    <string name="imgDescrOnHome">Mars</string>
    <string name="showIp">Uploading files</string>
    <string name="showIpBtnText">Show ip</string>
    <string name="chooseFileBtnText">Choose file</string>
    <string name="first_fragment_label">firstFragment</string>
    <string name="appLanguage">Language:</string>
    <string name="newConnectionTextMain">Your connection key is</string>
    <string name="btnTextDownload">Download files!</string>
    <string name="btnTextDeleteConnection">Delete Connection</string>
    <string name="btnReadyText">Ready</string>
    <string name="textCopyCode">Copy this key-code and send it to sender!</string>
    <string name="files_ready_to_transfer">STATUS:</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="textConfirmations">"Are you sure you want to delete the connection? The file may currently be being transferred to you!"</string>
    <string name="text_HintCircle">When your files will be ready to be downloaded   The circle below should change color from red to green!</string>
    <string name="upload_file">Click on the button below to select   and upload the files!</string>
    <string name="uploadText_attention">Don\'t forget to click the \'Ready\' button \n when the files will be ready to be downloaded!</string>
    <string name="changeThemeText">Application theme</string>
    <string name="contactWithDveloperTitle">Contact with me</string>
    <string name="theme_contact">Theme:</string>
    <string name="hint_contact_theme">Write theme</string>
    <string name="mailText_contact">Text:</string>
    <string name="text_mailContact">Text</string>
    <string name="settings_send">Send</string>
</resources>