<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    style="@style/ScreenBackground"
    android:padding="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settings_button_KS_backOnMain"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:background="@drawable/banner_background"
        android:padding="@dimen/_2sdp"
        style="@style/ImageBackground"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_languageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeThemeText"
        style="@style/MainText"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button_KS_backOnMain"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settings_button_darkMode"
        style="@style/ImageBackground"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/banner_background"
        android:padding="@dimen/_2sdp"
        android:src="@drawable/ic_dark_mode"
        app:layout_constraintBottom_toBottomOf="@+id/settings_languageText"
        app:layout_constraintStart_toEndOf="@+id/settings_languageText"
        app:layout_constraintTop_toTopOf="@+id/settings_languageText" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/settings_button_lightMode"
        style="@style/ImageBackground"
        android:layout_width="@dimen/_34sdp"
        android:layout_height="@dimen/_34sdp"
        android:background="@drawable/banner_background"
        android:padding="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:src="@drawable/ic_light_mode"
        app:layout_constraintBottom_toBottomOf="@+id/settings_languageText"
        app:layout_constraintStart_toEndOf="@+id/settings_button_darkMode"
        app:layout_constraintTop_toTopOf="@+id/settings_languageText" />



    <TextView
        android:id="@+id/settings_contactTitle"
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactWithDveloperTitle"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_languageText"/>

    <TextView
        android:id="@+id/settings_contactTheme"
        style="@style/MainText"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_contact"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_contactTitle" />

    <EditText
        android:id="@+id/contact_theme_text"
        style="@style/TextColor"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_height="@dimen/_30sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_password"
        android:hint="@string/hint_contact_theme"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/subTitle"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/settings_contactTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/settings_contactTheme"
        app:layout_constraintTop_toTopOf="@+id/settings_contactTheme" />

    <TextView
        android:id="@+id/settings_contactText"
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailText_contact"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_contactTheme" />

    <EditText
        android:id="@+id/contact_mail_text"
        style="@style/TextColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_password"
        android:gravity="top|start"
        android:hint="@string/text_mailContact"
        android:inputType="textMultiLine"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textColorHint="@color/subTitle"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_sendMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_contactText" />


    <Button
        android:id="@+id/btn_sendMail"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainAccent"
        android:text="@string/settings_send"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>







</androidx.constraintlayout.widget.ConstraintLayout>